--- a/res/layout/theme_color_option.xml
+++ b/res/layout/theme_color_option.xml
@@ -20,10 +20,8 @@
     android:layout_gravity="center"
     android:padding="8dp">
 
-    <ImageView
-        android:id="@+id/option_tile"
-        android:layout_width="@dimen/component_color_chip_container_size"
-        android:layout_height="@dimen/component_color_chip_container_size"
-        android:layout_gravity="center"
-        android:src="@drawable/color_chip"/>
+    <com.statix.support.preferences.CustomSeekBarPreference
+            android:title=""
+            android:persistent="true"/>
+
 </FrameLayout>
